# AoC2022

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
include/: common.hpp  types.hpp
src/day1/: main.cpp
src/day10/: main.cpp
src/day11/: main.cpp
src/day12/: main.cpp
src/day13/: main.cpp  test.py
src/day14/: main.cpp
src/day15/: main.cpp
src/day16/: input.txt  main.cpp
src/day2/: main.cpp
src/day3/: main.cpp
src/day4/: main.cpp
src/day5/: input.txt  main.cpp
src/day6/: main.cpp
src/day7/: main.cpp
src/day8/: main.cpp
src/day9/: main.cpp
